<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="hello">Version 1.0</string>
    <string name="app_name">Automatic Time Announcer</string>
    <string name="test">Hello, Brave new world</string>
    <string name="clock_service_started">Time Announcer service running</string>
    <string name="clock_service_label">Automatic Time Announcer</string>
    <string name="clock_service_stopped">Time Announcer service stopped</string>
    <string name="clock_service_disconnect">Time Announcer service disconnected</string>
    <string name="start_service">Start Time Announcer</string>
    <string name="stop_service">Stop Time Announcer</string>
    <string name="service_name">TalkingClock Service</string>
    <string name="option_menu_about">About</string>
    <string name="about_text">Automatic Time Announcer\nCopyright 2010\nJohan Lekberg\n\nVersion 1.2\n\njayelh.jl@gmail.com\n\nhttp://hem.bredband.net/johlek/AutomaticTimeAnnouncer.html</string>
    <string name="option_menu_settings">Settings</string>
    <string name="inline_generel">Generel settings</string>
    <string name="say_time_intervall_title">Time bettwen anonuncements</string>
    <string name="say_time_intervall_dialog_title">Set time bettwen anonuncements</string>
    <string name="say_seconds">Say seconds when zero</string>
    <string name="inline_language">Language settings</string>
    <string name="language_preference_title">Set language</string>
    <string name="language_preference_dialog_title">Set Language</string>
    <string name="clock_service_changed">Settings saved</string>
    <string name="alert_ok">Ok</string>
    <string name="about_title">About Automatic Time Announcer</string>
</resources>